--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+              <groupId>org.apache.camel</groupId>
+              <artifactId>camel-direct</artifactId>
+              <version>4.9.0</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
