--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,8 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-              <groupId>org.apache.camel</groupId>
-              <artifactId>camel-direct</artifactId>
-              <version>4.9.0</version>
+              <groupId>org.apache.camel.quarkus</groupId>
+              <artifactId>camel-quarkus-direct</artifactId>
             </dependency>
 
         </dependencies>
